--- a/2-modal/index.html
+++ b/2-modal/index.html
@@ -3,13 +3,244 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Modal</title>
     <style>
-      /* write CSS here */
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      html {
+        font-size: 62.5%;
+        font-family: "Work Sans", sans-serif;
+      }
+
+      .main-container {
+        position: relative;
+        height: 100vh;
+      }
+
+      /* Layouts */
+
+      .container-body-modal {
+        padding: 0 1rem;
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem;
+      }
+
+      .container-body--button {
+        display: flex;
+        justify-content: end;
+        gap: 1rem;
+        transform: translateX(3rem);
+      }
+
+      .hidden {
+        display: none;
+      }
+
+      /* Font-stylings */
+
+      .text-dark {
+        font-weight: 600;
+      }
+
+      .container-body--header {
+        font-size: 1.7rem;
+      }
+
+      .container-body--main {
+        font-size: 1.5rem;
+        color: #8a8b99;
+      }
+      /* btn-stylings */
+
+      .btn {
+        padding: 0.5rem;
+        cursor: pointer;
+        border-radius: 0.5rem;
+      }
+
+      .show-modal--btn {
+        color: #fff;
+        font-size: 1.5rem;
+        background-color: #e2262a;
+        border: none;
+
+        padding: 1rem 1.2rem;
+      }
+
+      .cancel-btn {
+        padding: 0.75rem 1rem;
+        font-size: 1.4rem;
+        background-color: #fff;
+        border: 1px solid #b8b8b8;
+      }
+
+      .deactivate-btn {
+        padding: 0.75rem 1rem;
+        color: #fff;
+        background-color: #e2262a;
+        border: none;
+        font-size: 1.4rem;
+        width: 10rem;
+      }
+
+      /* Icon-stylings */
+
+      .danger-icon-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        border-radius: 50%;
+        height: 4rem;
+        width: 4rem;
+        background-color: #ffe2e2;
+      }
+
+      .close-icon {
+        height: 2.5em;
+        width: 2.5em;
+        transform: translateY(-1rem);
+        cursor: pointer;
+      }
+
+      /* Initial-page-view-stying */
+
+      .show-modal--btn {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+
+      /* Viewing Modal */
+
+      .modal-container {
+        display: grid;
+        grid-template-columns: max-content 1fr max-content;
+        width: 50rem;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(1.2);
+        z-index: 100;
+        border-radius: 1rem;
+        box-shadow: 0 0 0.3rem rgb(27, 27, 27, 0.5);
+        padding: 2.5rem 2rem;
+        background-color: #fff;
+      }
+
+      /* OverlayEffect */
+      .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgb(132, 138, 150);
+        backdrop-filter: blur(3px);
+        z-index: 50;
+      }
     </style>
   </head>
-  <body></body>
+  <body class="main-container">
+    <button class="btn show-modal--btn show-modal">Deactivate account</button>
+    <div class="modal hidden">
+      <div class="modal-container">
+        <div class="danger-icon-container">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="2.5em"
+            height="2.5em"
+            viewBox="0 0 24 24"
+            class="danger-icon"
+          >
+            <path
+              fill="#e95255"
+              d="M12 7.25a.75.75 0 0 1 .75.75v5a.75.75 0 0 1-1.5 0V8a.75.75 0 0 1 .75-.75M12 17a1 1 0 1 0 0-2a1 1 0 0 0 0 2"
+            />
+            <path
+              fill="#e95255"
+              fill-rule="evenodd"
+              d="M8.294 4.476C9.366 3.115 10.502 2.25 12 2.25c1.498 0 2.634.865 3.706 2.226c1.054 1.34 2.17 3.32 3.6 5.855l.436.772c1.181 2.095 2.115 3.75 2.605 5.077c.5 1.358.62 2.59-.138 3.677c-.735 1.055-1.962 1.486-3.51 1.69c-1.541.203-3.615.203-6.274.203h-.85c-2.66 0-4.733 0-6.274-.203c-1.548-.204-2.775-.635-3.51-1.69c-.758-1.087-.639-2.32-.138-3.677c.49-1.328 1.424-2.982 2.605-5.077l.436-.772c1.429-2.535 2.546-4.516 3.6-5.855m1.179.928C8.499 6.641 7.437 8.52 5.965 11.13l-.364.645c-1.226 2.174-2.097 3.724-2.54 4.925c-.438 1.186-.378 1.814-.04 2.3c.361.516 1.038.87 2.476 1.06c1.432.188 3.406.19 6.14.19h.727c2.733 0 4.707-.002 6.14-.19c1.437-.19 2.114-.544 2.474-1.06c.339-.486.4-1.114-.038-2.3c-.444-1.201-1.315-2.751-2.541-4.925l-.364-.645c-1.472-2.61-2.534-4.489-3.508-5.726C13.562 4.18 12.813 3.75 12 3.75c-.813 0-1.562.429-2.527 1.654"
+              clip-rule="evenodd"
+            />
+          </svg>
+        </div>
+        <div class="container-body-modal">
+          <div class="container-body--header text-dark">Deactivate account</div>
+          <div class="container-body--main">
+            Are you sure you want to deactivate your account? All of your data
+            will be permanently removed from our servers forever. This action
+            cannot be undone.
+          </div>
+          <div class="container-body--button">
+            <button class="btn cancel-btn text-dark close-modal">Cancel</button>
+            <button class="btn deactivate-btn close-modal">Deactivate</button>
+          </div>
+        </div>
+        <div class="close-icon-container">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="1em"
+            height="1em"
+            viewBox="0 0 24 24"
+            class="close-icon close-modal"
+          >
+            <path
+              fill="#a6a6a6"
+              d="M6.4 19L5 17.6l5.6-5.6L5 6.4L6.4 5l5.6 5.6L17.6 5L19 6.4L13.4 12l5.6 5.6l-1.4 1.4l-5.6-5.6z"
+            />
+          </svg>
+        </div>
+      </div>
+    </div>
+    <div class="overlay hidden"></div>
+  </body>
   <script>
     // write javascript here
+
+    "use strict";
+
+    const modal = document.querySelector(".modal");
+    const overlay = document.querySelector(".overlay");
+    const btnCloseModal = document.querySelectorAll(".close-modal");
+    const btnsOpenModal = document.querySelector(".show-modal");
+
+    const openModal = function () {
+      modal.classList.remove("hidden");
+      overlay.classList.remove("hidden");
+    };
+
+    const closeModal = function () {
+      modal.classList.add("hidden");
+      overlay.classList.add("hidden");
+    };
+
+    btnsOpenModal.addEventListener("click", openModal);
+
+    for (let i = 0; i < btnCloseModal.length; i++) {
+      btnCloseModal[i].addEventListener("click", closeModal);
+    }
+
+    overlay.addEventListener("click", closeModal);
+
+    document.addEventListener("keydown", function (e) {
+      // console.log(e.key);
+
+      if (e.key === "Escape" && !modal.classList.contains("hidden")) {
+        closeModal();
+      }
+    });
   </script>
 </html>
