--- a/4-tabs/index.html
+++ b/4-tabs/index.html
@@ -3,13 +3,139 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Tabs</title>
     <style>
-      /* write CSS here */
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      html {
+        font-size: 62.5%;
+      }
+      body {
+        font-family: sans-serif;
+        font-size: 1.6rem;
+        font-weight: 400;
+        line-height: 1.5;
+        color: #777;
+        padding: 1.6rem;
+      }
+
+      span {
+        font-weight: 600;
+        color: rgb(0, 0, 0, 0.8);
+      }
+
+      .tab {
+        padding: 1.6rem 2rem;
+        transition: all 0.2s;
+        cursor: pointer;
+      }
+
+      .tabs {
+        list-style: none;
+        border-bottom: 1px solid #ddd;
+        margin-bottom: 1.6rem;
+        display: flex;
+        align-items: center;
+        gap: 2px;
+      }
+
+      .tab:hover,
+      .tab.active {
+        color: rgb(0, 82, 235, 0.8);
+        box-shadow: inset 0 -2px rgb(0, 82, 235, 0.8);
+      }
+      .tab-heading {
+        font-size: inherit;
+        font-weight: 600;
+      }
+      .container {
+        padding: 1.6rem;
+        background-color: #f9fafb;
+      }
+      .content {
+        display: none;
+      }
+      .content.active {
+        display: block;
+      }
     </style>
   </head>
-  <body></body>
+  <body>
+    <ul class="tabs">
+      <li class="tab tab--profile active">
+        <h2 class="tab-heading">Profile</h2>
+      </li>
+      <li class="tab tab--dashboard">
+        <h2 class="tab-heading">Dashboard</h2>
+      </li>
+      <li class="tab tab--settings">
+        <h2 class="tab-heading">Settings</h2>
+      </li>
+      <li class="tab tab--contacts">
+        <h2 class="tab-heading">Contacts</h2>
+      </li>
+    </ul>
+    <div class="container">
+      <div class="content content--profile active">
+        <p>
+          This is some placeholder content the
+          <span>Profile tab's associated content</span>. Clicking another tab
+          will toggle the visibility of this one for the next. The tab
+          JavaScript swaps classes to control the content visibility and
+          styling.
+        </p>
+      </div>
+      <div class="content content--dashboard">
+        <p>
+          This is some placeholder content the
+          <span>Dashboard tab's associated content</span>. Clicking another tab
+          will toggle the visibility of this one for the next. The tab
+          JavaScript swaps classes to control the content visibility and
+          styling.
+        </p>
+      </div>
+      <div class="content content--settings">
+        <p>
+          This is some placeholder content the
+          <span>Settings tab's associated content</span>. Clicking another tab
+          will toggle the visibility of this one for the next. The tab
+          JavaScript swaps classes to control the content visibility and
+          styling.
+        </p>
+      </div>
+      <div class="content content--contacts">
+        <p>
+          This is some placeholder content the
+          <span>content tab's associated content</span>. Clicking another tab
+          will toggle the visibility of this one for the next. The tab
+          JavaScript swaps classes to control the content visibility and
+          styling.
+        </p>
+      </div>
+    </div>
+  </body>
   <script>
-    // write javascript here
+    const tabs = document.querySelectorAll(".tab");
+    let activeTab = "profile";
+
+    function clickAction(tab) {
+      document.querySelector(`.tab--${activeTab}`).classList.remove("active");
+      document
+        .querySelector(`.content--${activeTab}`)
+        .classList.remove("active");
+
+      activeTab = tab.innerText.toLowerCase();
+
+      document.querySelector(`.tab--${activeTab}`).classList.add("active");
+      document.querySelector(`.content--${activeTab}`).classList.add("active");
+    }
+
+    for (let i = 0; i < tabs.length; i++) {
+      const tab = tabs[i];
+      tab.addEventListener("click", () => clickAction(tab));
+    }
   </script>
 </html>
