--- a/1-contact-us-form/index.html
+++ b/1-contact-us-form/index.html
@@ -6,9 +6,302 @@
     <title>Document</title>
     <style>
       /* write CSS here */
+
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      html {
+        font-size: 62.5%;
+        height: 100%;
+      }
+
+      body {
+        font-family: "Poppins", sans-serif;
+
+        background-image: radial-gradient(
+            circle at 5% 30%,
+            rgba(247, 229, 244, 1) 5%,
+            transparent 15%
+          ),
+          radial-gradient(circle at 30% 10%, #d0c8df 0%, transparent 25%);
+        /* overflow: hidden; */
+      }
+
+      /* Header */
+      .header {
+        height: 30%;
+        width: 50%;
+        /* background-color: antiquewhite; */
+        margin: 5rem auto;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+      }
+
+      .Contact {
+        font-size: 4rem;
+        font-weight: 700;
+      }
+
+      .Lorem {
+        font-size: 20px;
+        color: #808589;
+        font-weight: 500;
+      }
+
+      /* Main-form */
+
+      .main-body {
+        height: 70%;
+      }
+
+      .form-container {
+        display: flex;
+        flex-direction: column;
+        gap: 1.2rem;
+        font-weight: 500;
+      }
+
+      input {
+        display: block;
+        height: 4rem;
+        margin-top: 1rem;
+        border: 0.2rem solid #ced0d3;
+        border-radius: 5px;
+        box-shadow: 0 0 2px #e5e7ea;
+      }
+
+      textarea {
+        display: block;
+        margin-top: 1rem;
+        height: 10rem;
+        width: 100%;
+        border: 0.2rem solid #ced0d3;
+        border-radius: 0.5rem;
+        box-shadow: 0 0 0.2rem #e5e7ea;
+        padding-left: 1rem;
+        padding-top: 0.5rem;
+      }
+
+      .form-container {
+        width: 50%;
+        margin: 0 auto;
+      }
+
+      .name {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 3rem;
+      }
+
+      input {
+        width: 100%;
+        padding-left: 1rem;
+      }
+
+      label {
+        font-size: 1.4rem;
+      }
+
+      .phone-number input {
+        width: 100%;
+        /* padding-left: 15px; */
+        /* border-collapse: collapse; */
+        border-left: none;
+        border-radius: 0;
+        border-top-right-radius: 0.5rem;
+        border-bottom-right-radius: 0.5rem;
+        height: 4rem;
+        padding-left: 1rem;
+      }
+
+      .Phone-no-dropdown {
+        display: flex;
+        /* border-collapse: collapse; */
+      }
+
+      .country {
+        height: 4rem;
+        margin-top: 1rem;
+
+        border-top-left-radius: 0.5rem;
+        border-bottom-left-radius: 0.5rem;
+        color: #adb5bd;
+        padding-left: 1rem;
+        border: 0.2rem solid #ced0d3;
+        box-shadow: 0 0 0.2rem #e5e7ea;
+        border-right: 0;
+      }
+
+      .agreement {
+        display: flex;
+        align-items: center;
+        gap: 3rem;
+        padding-top: 1rem;
+        font-size: 1.3rem;
+      }
+
+      .agreement p {
+        color: #6e7074;
+      }
+
+      a {
+        text-decoration: none;
+        font-weight: 600;
+      }
+
+      button {
+        width: 100%;
+        height: 4rem;
+        background-color: #4949e0;
+        border-radius: 0.5rem;
+        border: none;
+        color: #fff;
+        font-weight: 700;
+        cursor: pointer;
+      }
+
+      button:hover {
+        background-color: #1a285e;
+      }
+
+      /* Slider button */
+      .switch {
+        position: relative;
+        display: inline-block;
+        width: 5rem;
+        height: 3rem;
+      }
+
+      /* Hide default HTML checkbox */
+      .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+      }
+
+      /* The slider */
+      .slider {
+        display: flex;
+        align-items: center;
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        -webkit-transition: 0.4s;
+        transition: 0.4s;
+      }
+
+      .slider:before {
+        position: absolute;
+        content: "";
+        height: 2.2rem;
+        width: 2.2rem;
+        left: 0.4rem;
+        bottom: 0.4rem;
+        background-color: white;
+        -webkit-transition: 0.4s;
+        transition: 0.4s;
+      }
+
+      input:checked + .slider {
+        background-color: #2196f3;
+      }
+
+      input:focus + .slider {
+        box-shadow: 0 0 1px #2196f3;
+      }
+
+      input:checked + .slider:before {
+        -webkit-transform: translateX(2rem);
+        -ms-transform: translateX(2rem);
+        transform: translateX(2rem);
+      }
+
+      /* Rounded sliders */
+      .slider.round {
+        border-radius: 3.4rem;
+      }
+
+      .slider.round:before {
+        border-radius: 50%;
+      }
+
+      /* Sizing and font-weight */
+      .first-name,
+      .last-name,
+      .company,
+      .email,
+      .phone-number,
+      .message {
+        font-weight: 600;
+      }
     </style>
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <p class="Contact">Contact sales</p>
+      <p class="Lorem">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut soluta,
+        tempora
+      </p>
+    </div>
+
+    <div class="main-body">
+      <form class="form-container">
+        <div class="name">
+          <div class="first-name">
+            <label>First Name</label>
+            <input type="text" placeholder="" />
+          </div>
+          <div class="last-name">
+            <label>Last name</label>
+            <input type="text" placeholder="" />
+          </div>
+        </div>
+        <div class="company">
+          <label>Company</label>
+          <input type="text" placeholder="" />
+        </div>
+        <div class="email">
+          <label>Email</label>
+          <input type="email" placeholder="" />
+        </div>
+        <div class="phone-number">
+          <label>Phone number</label>
+          <div class="Phone-no-dropdown">
+            <select id="Countries" name="Countries" class="country">
+              <option value="US">US</option>
+              <option value="India">India</option>
+
+              <input type="number" />
+            </select>
+          </div>
+        </div>
+        <div class="message">
+          <label for="message">Message</label>
+          <textarea></textarea>
+        </div>
+        <div class="agreement">
+          <label class="switch">
+            <input type="checkbox" />
+            <span class="slider round"></span>
+          </label>
+          <p class="agreement-text">
+            By selecting this,you agree to our <a href="#">privacy policy.</a>
+          </p>
+        </div>
+        <button>Let's talk</button>
+      </form>
+    </div>
+  </body>
   <script>
     // write javascript here
   </script>
