--- a/6-mobile-navbar/index.html
+++ b/6-mobile-navbar/index.html
@@ -3,13 +3,216 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>Mobile navbar</title>
     <style>
       /* write CSS here */
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      html {
+        font-size: 62.5%;
+      }
+      body {
+        font-family: "Rubik", sans-serif;
+        line-height: 1;
+        font-weight: 400;
+        color: #555;
+        overflow-x: hidden;
+      }
+
+      .header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: #fdf2e9;
+        height: 9.6rem;
+        padding: 0 4.8rem;
+        position: relative;
+      }
+      .logo {
+        height: 2.2rem;
+      }
+      .nav-list {
+        list-style: none;
+        display: flex;
+        align-items: center;
+        gap: 4.8rem;
+      }
+      .nav-link:link,
+      .nav-link:visited {
+        display: inline-block;
+        text-decoration: none;
+        color: #333;
+        font-weight: 500;
+        font-size: 1.8rem;
+        transition: all 0.3s;
+      }
+      .nav-link:hover,
+      .nav-link:active {
+        color: #cf711f;
+      }
+      .nav-link.nav-cta:link,
+      .nav-link.nav-cta:visited {
+        color: #fff;
+        background-color: #e67222;
+        padding: 1.2rem 2.4rem;
+        border-radius: 0.9rem;
+      }
+      .nav-link.nav-cta:hover,
+      .nav-link.nav-cta:active {
+        background-color: #cf711f;
+      }
+
+      .btn-nav-mobile,
+      .menu-mobile-nav {
+        border: none;
+        background: none;
+        cursor: pointer;
+        display: none;
+      }
+
+      *:focus {
+        outline: none;
+        box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
+      }
+
+      @media only screen and (max-width: 75em) {
+        html {
+          font-size: 56.25%;
+        }
+        .header {
+          padding: 0 3.2rem;
+        }
+        .nav-list {
+          gap: 3.2rem;
+        }
+      }
+      @media only screen and (max-width: 50em) {
+        html {
+          font-size: 50%;
+        }
+
+        .nav {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background-color: rgba(255, 255, 255, 0.9);
+          backdrop-filter: blur(10px);
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100vh;
+          transform: translateX(100%);
+          transition: all 0.3s ease-in;
+          opacity: 0;
+
+          visibility: hidden;
+        }
+        .nav-open .nav {
+          opacity: 1;
+          pointer-events: auto;
+          visibility: visible;
+          transform: translateX(0);
+        }
+        .nav-list {
+          flex-direction: column;
+          gap: 4.8rem;
+        }
+        .nav-link:link,
+        .nav-link:visited {
+          font-size: 3rem;
+        }
+        .menu-mobile-nav {
+          position: relative;
+          top: 2rem;
+        }
+        .menu-mobile-nav,
+        .menu-mobile-nav::before,
+        .menu-mobile-nav::after {
+          display: block;
+          height: 2px;
+          width: 4rem;
+          border-radius: 100px;
+          background-color: #333;
+          transition: all 0.4s;
+        }
+        .menu-mobile-nav::before,
+        .menu-mobile-nav::after {
+          content: "";
+          position: absolute;
+          left: 0;
+        }
+        .menu-mobile-nav::before {
+          top: -0.8rem;
+        }
+        .menu-mobile-nav::after {
+          top: 0.8rem;
+        }
+        .nav-open .menu-mobile-nav {
+          background-color: rgba(255, 255, 255);
+        }
+        .nav-open .menu-mobile-nav::before {
+          top: 0;
+          transform: rotate(135deg);
+        }
+        .nav-open .menu-mobile-nav::after {
+          bottom: 0;
+          transform: rotate(-135deg);
+        }
+
+        .btn-nav-mobile {
+          display: block;
+          height: 4rem;
+          z-index: 100;
+        }
+      }
     </style>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <a href="#">
+        <img class="logo" alt="Omnifood logo" src="omnifood-logo.png" />
+      </a>
+
+      <nav class="nav">
+        <ul class="nav-list">
+          <li><a class="nav-link" href="#">How it works</a></li>
+          <li><a class="nav-link" href="#">Meals</a></li>
+          <li>
+            <a class="nav-link" href="#">Testimonials</a>
+          </li>
+          <li><a class="nav-link" href="#">Pricing</a></li>
+          <li><a class="nav-link nav-cta" href="#">Try for free</a></li>
+        </ul>
+      </nav>
+      <div class="btn-nav-mobile">
+        <div class="menu-mobile-nav"></div>
+      </div>
+    </header>
+  </body>
   <script>
-    // write javascript here
+    const mobileBtnNav = document.querySelector(".btn-nav-mobile");
+    const header = document.querySelector(".header");
+    const navLink = document.querySelectorAll(".nav-link");
+
+    mobileBtnNav.addEventListener("click", function () {
+      header.classList.toggle("nav-open");
+    });
+
+    for (let i = 0; i < navLink.length; i++) {
+      navLink[i].addEventListener("click", function () {
+        header.classList.remove("nav-open");
+      });
+    }
   </script>
 </html>
